ExamPackage/main/default/objects/Hero_Answer__c/Hero_Answer__c.object-meta.xml
<CustomObject>
    <label>Hero Answer</label>
    <nameField>
        <displayFormat>HA-{0}</displayFormat>
        <label>Hero Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hero Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>