ExamPackage/main/default/objects/Hero_Answer__c/fields/Exam_Question__c.field-meta.xml
<CustomField>
    <fullName>Exam_Question__c</fullName>
    <label>Exam Question</label>
    <referenceTo>Exam_Question__c</referenceTo>
    <relationshipLabel>Hero Answers</relationshipLabel>
    <relationshipName>Hero_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>