ExamPackage/main/default/objects/Hero_Answer__c/fields/Exam_Result__c.field-meta.xml
<CustomField>
    <fullName>Exam_Result__c</fullName>
    <label>Exam Result</label>
    <referenceTo>Exam_Result__c</referenceTo>
    <relationshipLabel>Hero Answers</relationshipLabel>
    <relationshipName>Hero_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>